--- a/package.json
+++ b/package.json
@@ -12,18 +12,12 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "dotenv-webpack": "^1.8.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^2.5.1",
     "file-loader": "^4.3.0",
     "html-webpack-plugin": "^3.2.0",
     "install": "^0.13.0",
-    "node-sass": "^4.14.1",
     "react-hot-loader": "^4.12.21",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.37.5",
     "sass-loader": "^7.3.1",
     "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
