--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "dotenv-webpack": "^1.8.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.25.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "file-loader": "^4.3.0",
     "html-webpack-plugin": "^3.2.0",
     "install": "^0.13.0",
